--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,22 @@
 {
+  "include": ["index.ts", "src", "vite.config.ts"],
   "compilerOptions": {
-    "target": "esnext"
+    "declaration": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "noUnusedLocals": true,
+    "outDir": "dist",
+    "sourceMap": true,
+    "strict": true,
+    "target": "es2018",
+
+    "esModuleInterop": true,
+    "allowJs": true,
+    "checkJs": true,
+    "lib": ["dom", "es2018"],
+    "baseUrl": ".",
+    "paths": {
+      "@*": ["src/*"]
+    }
   }
 }
